syntax="proto3";

package greeting.v1;

option go_package = "nexus-exp/proto/v1;greeting";

message GreetInput {
  string name = 1;
}

message GreetOutput {
  string greeting = 1;
}

message SlothGreetInput {
  string greeting = 1;
  string sloth_name = 2;
}

message SlothGreetOutput {
  string greeting = 1;
}

service Greeting {
  rpc Greet(GreetInput) returns (GreetOutput) {
  }

  rpc SlothGreet(SlothGreetInput) returns (SlothGreetOutput) {
  }
}